--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -9,6 +9,7 @@
 </head>
 
 <link rel="stylesheet" href="../static/css/index.css"></link>
+<link rel="stylesheet" href="../static/css/about.css"></link>
 
 <body>
   <ul class="topnav">
@@ -18,8 +19,46 @@
     <li class="right"><a class="active" href="about"><i class="ri-information-line"></i>&nbsp;About</a></li>
   </ul>
 
-  <div class="complex">
+  <p class="bio-section center font-xlarger about small-section">
+      This is a university project work for the exam named <a href="https://unipv.cloud/" target="_blank" class="aliceblue"><textit>Cloud
+      Computing</textit></a>. <br>Created by 5 students of the master's degree in Computer Engineering at the 
+      <a href="https://web.unipv.it/" target="_blank" class="aliceblue">University of Pavia</a>, Italy. 
+  </p>
 
+  <h2 class="center">Technical Infos</h2>
+  <p class="small-section about">
+      The aim of the project is to use AWS Cloud technology to provide a service to users that is fast and reliable. <br> The transaltor 
+      is based on the open-source project <a href="https://www.argosopentech.com/" target="_blank" class="aliceblue">Argos Translate</a> , that is,
+      a Python library base on <a href="https://opennmt.net/" target="_blank" class="aliceblue">OpenNMT</a>. <br> The site was coded entirely by us, 
+      without the use of any CMS.
+  </p>
+
+  <h2 class="center">Our Team</h2>
+  <div class="creators">
+    <div class="creators-column center">
+      <h2>Al Masoud Aiman</h2>
+      <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+    </div>
+
+    <div class="creators-column center">
+          <h2>Bottini Mattia</h2>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+    </div>
+
+    <div class="creators-column center">
+        <h2>Lotito Davide Pio</h2>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+    </div>
+    
+    <div class="creators-column center">
+        <h2>Marinelli Francesco</h2>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+    </div>
+
+    <div class="creators-column center">
+        <h2>Petri Riccardo</h2>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+    </div>
   </div>
 
   <footer id="footer">
