--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -67,7 +67,7 @@
         <button id="button_query_to_db"><i class="ri-emotion-sad-line button-icon"></i></button>
       </span>
     </p>
-    <input type="button" id="translate" class="button" name="translate" value="Translate">
+    <button id="translate" class="button" name="translate"><i class="ri-translate"></i></button>
   </div>
 
   <footer id="footer">
