--- a/src/static/css/community.css
+++ b/src/static/css/community.css
@@ -40,6 +40,7 @@ ul{
   align-items:center;
   margin-left: 30%;
   justify-content: flex-start;
+  margin-top: 1%;
 }
 
 .possible-translations-area textarea{
