--- a/src/templates/community.html
+++ b/src/templates/community.html
@@ -35,6 +35,7 @@
                   <i class="ri-send-plane-2-fill"></i>
                 </button>
               </div>
+              <!-- adding possible translations here -->
         </details>
       {% endfor %}
   </div>
