--- a/src/templates/community.html
+++ b/src/templates/community.html
@@ -19,7 +19,7 @@
     <li class="right"><a href="about"><i class="ri-information-line"></i>&nbsp;About</a></li>
   </ul>
 
-  <div class="big-list">
+  <!-- <div class="big-list">
       {% for row in data %}
       <details id="{{ row[4] }}" class="item {{ row[4] }}">
               <summary>
@@ -35,10 +35,13 @@
                   <i class="ri-send-plane-2-fill"></i>
                 </button>
               </div>
-              <!-- adding possible translations here -->
         </details>
       {% endfor %}
-  </div>
+  </div> -->
+
+  <div class="big-list"></div>
+
+  <button id="get-new-data" class="button"><i class="ri-arrow-down-fill"></i></button>
 
   <footer id="footer">
     <span>
