index icons substituted with PNGs

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -42,7 +42,7 @@
 
       </select>
 
-      <button type="button" name="invert" id="invert" class="button"><i class="ri-arrow-left-right-fill"></i></button>
+      <button type="button" name="invert" id="invert" class="button"><img src="static/res/arrow-left-right-fill.png"></button>
 
       <select id="to" name="to" class="to" data-placeholder="Choose a Language...">
 
@@ -56,18 +56,18 @@
     <p class="textareas_line">
       <textarea id="from_text" name="from_text"></textarea>
       <span class="vertical_buttons">
-        <button id="button_speak_from" class="speaker"><i class="ri-volume-up-line button-icon"></i></button>
-        <button id="button_paste_from"><i class="ri-clipboard-line button-icon"></i></button>
+        <button id="button_speak_from" class="speaker"><img src="static/res/volume-up-line.png"></button>
+        <button id="button_paste_from"><img src="static/res/clipboard-line.png"></button>
       </span>
 
       <textarea readonly id="to_text" class="to_text" name="to_text"></textarea><br>
       <span class="vertical_buttons">
-        <button id="button_speak_to" class="speaker"><i class="ri-volume-up-line button-icon"></i></button>
-        <button id="button_copy_to"><i class="ri-file-copy-line button-icon"></i></button>
-        <button id="button_query_to_db"><i class="ri-emotion-sad-line button-icon"></i></button>
+        <button id="button_speak_to" class="speaker"><img src="static/res/volume-up-line.png"></button>
+        <button id="button_copy_to"><img src="static/res/file-copy-line.png"></button>
+        <button id="button_query_to_db"><img src="static/res/emotion-sad-line.png"></button>
       </span>
     </p>
-    <button id="translate" class="button" name="translate"><i class="ri-translate"></i></button>
+    <button id="translate" class="button" name="translate"><img src="static/res/translate.png"></button>
   </div>
 
   <footer id="footer">
