--- a/src/static/css/community.css
+++ b/src/static/css/community.css
@@ -53,6 +53,17 @@ summary .complaints{
   margin-top: 1%;
 }
 
+.possible-translation-el {
+  position: relative;
+  padding: 1%;
+  border-radius: 15px;
+  background-color:rgba(35, 71, 163, 0.8);
+  align-items: center;
+  margin: 1%;
+  color: #fff;
+  border: 2px solid #000;
+}
+
 .possible-translations-area textarea{
     padding: 1%;
     border: 2px solid #000;
@@ -78,3 +89,4 @@ summary .complaints{
   left: 45%; right: 45%;
   margin: 2% 0 5% 0;
 }
+
