--- a/src/templates/community.html
+++ b/src/templates/community.html
@@ -41,7 +41,9 @@
 
   <div class="big-list"></div>
 
-  <button id="get-new-data" class="button"><i class="ri-arrow-down-fill"></i></button>
+  <button id="get-new-data" class="button"><img src="static/res/arrow-down-fill.png" class="arrow">
+  <img src="static/res/arrow-down-fill-hover.png" class="arrowHover">
+  </button>
 
   <footer id="footer">
     <span>
