--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -42,7 +42,9 @@
 
       </select>
 
-      <button type="button" name="invert" id="invert" class="button"><img src="static/res/arrow-left-right-fill.png"></button>
+      <button type="button" name="invert" id="invert" class="button"><img src="static/res/arrow-left-right-fill.png" class="buttonImage">
+        <img src="static/res/arrow-left-right-fill-hover.png" class="buttonHoverImage"></button>
+      </button>
 
       <select id="to" name="to" class="to" data-placeholder="Choose a Language...">
 
@@ -67,7 +69,8 @@
         <button id="button_query_to_db"><img src="static/res/emotion-sad-line.png"></button>
       </span>
     </p>
-    <button id="translate" class="button" name="translate"><img src="static/res/translate.png"></button>
+    <button id="translate" class="button" name="translate"><img src="static/res/translate.png" class="buttonImage">
+      <img src="static/res/translate-hover.png" class="buttonHoverImage"></button>
   </div>
 
   <footer id="footer">
