--- a/src/templates/community.html
+++ b/src/templates/community.html
@@ -41,8 +41,8 @@
 
   <div class="big-list"></div>
 
-  <button id="get-new-data" class="button"><img src="static/res/arrow-down-fill.png" class="buttonImage">
-  <img src="static/res/arrow-down-fill-hover.png" class="buttonHoverImage">
+  <button id="get-new-data" class="button"><img src="static/res/arrow-down-fill.png" class="button-image">
+  <img src="static/res/arrow-down-fill-hover.png" class="button-hover-image">
   </button>
 
   <footer id="footer">
