--- a/src/templates/community.html
+++ b/src/templates/community.html
@@ -14,9 +14,9 @@
 <body>
   <ul class="topnav">
     <li><a class="logo" title="Home" href="/"><img src="static/res/logoCloudTranslatorSvg.svg"></a></li>
-    <li><a href="/"><i class="ri-home-2-line"></i>&nbsp;Home</a></li>
-    <li><a class="active" href="community"><i class="ri-team-line"></i>&nbsp;Community</a></li>
-    <li class="right"><a href="about"><i class="ri-information-line"></i>&nbsp;About</a></li>
+    <li><a href="/"><img src="static/res/home-2-line-white.png" class="navbar-image">&nbsp;Home</a></li>
+    <li><a class="active" href="community"><img src="static/res/team-line.png" class="navbar-image">&nbsp;Community</a></li>
+    <li class="right"><a href="about"><img src="static/res/information-line.png" class="navbar-image">&nbsp;About</a></li>
   </ul>
 
   <!-- <div class="big-list">
