--- a/src/static/css/community.css
+++ b/src/static/css/community.css
@@ -4,6 +4,7 @@
     left: 5%;
     margin-bottom: 5%;
     margin-top: 5%;
+    font-size: larger;
 }
 
 .item{
@@ -62,6 +63,25 @@ summary .complaints{
   margin: 1%;
   color: #fff;
   border: 2px solid #000;
+  display: flex;
+  justify-content: space-between;
+}
+
+.votes-plus-button{
+  color: #000;
+  min-width: 50px;
+  border-radius: 50%;
+  margin-left: 8%;
+}
+
+.right-votes {
+  min-width: 15%;
+}
+
+.pressed{
+  box-shadow: inset 5px 5px 10px #777;
+  transform: translateY(1px);
+  background: #e5e5e5;
 }
 
 .possible-translations-area textarea{
