rm templ stuff in html

--- a/src/gateway/templates/community.html
+++ b/src/gateway/templates/community.html
@@ -13,10 +13,10 @@
 
 <body>
   <ul class="topnav">
-    <li><a class="logo" title="Home" href="/"><img src="static/res/logoCloudTranslatorSvg.svg"></a></li>
-    <li><a href="/"><img src="static/res/home-2-line-white.png" class="navbar-image">&nbsp;Home</a></li>
-    <li><a class="active" href="community"><img src="static/res/team-line.png" class="navbar-image">&nbsp;Community</a></li>
-    <li class="right"><a href="about"><img src="static/res/information-line.png" class="navbar-image">&nbsp;About</a></li>
+    <li><a class="logo" title="Home" href="/"><img src="../static/res/logoCloudTranslatorSvg.svg"></a></li>
+    <li><a href="/"><img src="../static/res/home-2-line-white.png" class="navbar-image">&nbsp;Home</a></li>
+    <li><a class="active" href="community"><img src="../static/res/team-line.png" class="navbar-image">&nbsp;Community</a></li>
+    <li class="right"><a href="about"><img src="../static/res/information-line.png" class="navbar-image">&nbsp;About</a></li>
   </ul>
 
   <!-- <div class="big-list">
@@ -41,8 +41,8 @@
 
   <div class="big-list"></div>
 
-  <button id="get-new-data" class="button"><img src="static/res/arrow-down-fill.png" class="button-image">
-  <img src="static/res/arrow-down-fill-hover.png" class="button-hover-image">
+  <button id="get-new-data" class="button"><img src="../static/res/arrow-down-fill.png" class="button-image">
+  <img src="../static/res/arrow-down-fill-hover.png" class="button-hover-image">
   </button>
 
   <footer id="footer">
