--- a/src/gateway/templates/about.html
+++ b/src/gateway/templates/about.html
@@ -13,10 +13,10 @@
 
 <body>
   <ul class="topnav">
-    <li><a class="logo" title="Home" href="/"><img src="static/res/logoCloudTranslatorSvg.svg"></a></li>
-    <li><a href="/"><img src="static/res/home-2-line-white.png" class="navbar-image">&nbsp;Home</a></li>
-    <li><a href="community"><img src="static/res/team-line.png" class="navbar-image">&nbsp;Community</a></li>
-    <li class="right"><a class="active" href="about"><img src="static/res/information-line.png" class="navbar-image">&nbsp;About</a></li>
+    <li><a class="logo" title="Home" href="/"><img src="../static/res/logoCloudTranslatorSvg.svg"></a></li>
+    <li><a href="/"><img src="../static/res/home-2-line-white.png" class="navbar-image">&nbsp;Home</a></li>
+    <li><a href="community"><img src="../static/res/team-line.png" class="navbar-image">&nbsp;Community</a></li>
+    <li class="right"><a class="active" href="about"><img src="../static/res/information-line.png" class="navbar-image">&nbsp;About</a></li>
   </ul>
 
   <div class="short-bio">
@@ -77,5 +77,5 @@
 
 </body>
 
-<script type="module" src="{{url_for('static', filename='scripts/about.js')}}"></script>
+<script type="module" src="../static/scripts/about.js"></script>
 </html>
